tests/snapshots/run_wpt_conformance__onnx_gather_float32_2D_tensor_and_2D_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gather.https.any.js",
    "gather float32 2D tensor and 2D indices default options",
    "onnx",
    "PASS",
)
