tests/snapshots/run_wpt_conformance__onnx_gather_float32_3D_tensor_and_1D_indices_options_axis_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gather.https.any.js",
    "gather float32 3D tensor and 1D indices options.axis=1",
    "onnx",
    "PASS",
)
